--- a/Kollegeni/Views/Booking/Create.cshtml
+++ b/Kollegeni/Views/Booking/Create.cshtml
@@ -13,22 +13,22 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Starttidspunkt" class="control-label"></label>
-                <input asp-for="Starttidspunkt" class="form-control" />
-                <span asp-validation-for="Starttidspunkt" class="text-danger"></span>
+                <label asp-for="StartTime" class="control-label"></label>
+                <input asp-for="StartTime" class="form-control" />
+                <span asp-validation-for="StartTime" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Sluttidspunkt" class="control-label"></label>
-                <input asp-for="Sluttidspunkt" class="form-control" />
-                <span asp-validation-for="Sluttidspunkt" class="text-danger"></span>
+                <label asp-for="EndTime" class="control-label"></label>
+                <input asp-for="EndTime" class="form-control" />
+                <span asp-validation-for="EndTime" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="FælleslokaleId" class="control-label"></label>
-                <select asp-for="FælleslokaleId" class ="form-control" asp-items="ViewBag.FælleslokaleId"></select>
+                <label asp-for="RoomId" class="control-label"></label>
+                <select asp-for="RoomId" class ="form-control" asp-items="ViewBag.FælleslokaleId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="ResidensId" class="control-label"></label>
-                <select asp-for="ResidensId" class ="form-control" asp-items="ViewBag.ResidensId"></select>
+                <label asp-for="TenantId" class="control-label"></label>
+                <select asp-for="TenantId" class ="form-control" asp-items="ViewBag.ResidensId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
