--- a/Kollegeni/Views/Booking/Delete.cshtml
+++ b/Kollegeni/Views/Booking/Delete.cshtml
@@ -12,28 +12,28 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Starttidspunkt)
+            @Html.DisplayNameFor(model => model.StartTime)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Starttidspunkt)
+            @Html.DisplayFor(model => model.StartTime)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Sluttidspunkt)
+            @Html.DisplayNameFor(model => model.EndTime)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Sluttidspunkt)
+            @Html.DisplayFor(model => model.EndTime)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Fælleslokale)
+            @Html.DisplayNameFor(model => model.Room)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Fælleslokale.Id)
+            @Html.DisplayFor(model => model.Room.Id)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Residens)
+            @Html.DisplayNameFor(model => model.Residency)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Residens.Id)
+            @Html.DisplayFor(model => model.Residency.Id)
         </dd>
     </dl>
     
