--- a/Kollegeni/Views/Booking/Edit.cshtml
+++ b/Kollegeni/Views/Booking/Edit.cshtml
@@ -14,24 +14,24 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="Starttidspunkt" class="control-label"></label>
-                <input asp-for="Starttidspunkt" class="form-control" />
-                <span asp-validation-for="Starttidspunkt" class="text-danger"></span>
+                <label asp-for="StartTime" class="control-label"></label>
+                <input asp-for="StartTime" class="form-control" />
+                <span asp-validation-for="StartTime" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Sluttidspunkt" class="control-label"></label>
-                <input asp-for="Sluttidspunkt" class="form-control" />
-                <span asp-validation-for="Sluttidspunkt" class="text-danger"></span>
+                <label asp-for="EndTime" class="control-label"></label>
+                <input asp-for="EndTime" class="form-control" />
+                <span asp-validation-for="EndTime" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="FælleslokaleId" class="control-label"></label>
-                <select asp-for="FælleslokaleId" class="form-control" asp-items="ViewBag.FælleslokaleId"></select>
-                <span asp-validation-for="FælleslokaleId" class="text-danger"></span>
+                <label asp-for="RoomId" class="control-label"></label>
+                <select asp-for="RoomId" class="form-control" asp-items="ViewBag.FælleslokaleId"></select>
+                <span asp-validation-for="RoomId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ResidensId" class="control-label"></label>
-                <select asp-for="ResidensId" class="form-control" asp-items="ViewBag.ResidensId"></select>
-                <span asp-validation-for="ResidensId" class="text-danger"></span>
+                <label asp-for="TenantId" class="control-label"></label>
+                <select asp-for="TenantId" class="form-control" asp-items="ViewBag.ResidensId"></select>
+                <span asp-validation-for="TenantId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
