--- a/Kollegeni/Views/Booking/Create.cshtml
+++ b/Kollegeni/Views/Booking/Create.cshtml
@@ -24,11 +24,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="RoomId" class="control-label"></label>
-                <select asp-for="RoomId" class ="form-control" asp-items="ViewBag.FælleslokaleId"></select>
+                <select asp-for="RoomId" class ="form-control" asp-items="ViewBag.RoomId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="TenantId" class="control-label"></label>
-                <select asp-for="TenantId" class ="form-control" asp-items="ViewBag.ResidensId"></select>
+                <select asp-for="TenantId" class ="form-control" asp-items="ViewBag.ResidencyId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
