--- a/Kollegeni/Views/Booking/Edit.cshtml
+++ b/Kollegeni/Views/Booking/Edit.cshtml
@@ -25,12 +25,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="RoomId" class="control-label"></label>
-                <select asp-for="RoomId" class="form-control" asp-items="ViewBag.FælleslokaleId"></select>
+                <select asp-for="RoomId" class="form-control" asp-items="ViewBag.RoomId"></select>
                 <span asp-validation-for="RoomId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="TenantId" class="control-label"></label>
-                <select asp-for="TenantId" class="form-control" asp-items="ViewBag.ResidensId"></select>
+                <select asp-for="TenantId" class="form-control" asp-items="ViewBag.ResidencyId"></select>
                 <span asp-validation-for="TenantId" class="text-danger"></span>
             </div>
             <div class="form-group">
