--- a/Kollegeni/Views/Booking/Create.cshtml
+++ b/Kollegeni/Views/Booking/Create.cshtml
@@ -27,8 +27,8 @@
                 <select asp-for="RoomId" class ="form-control" asp-items="ViewBag.RoomId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="TenantId" class="control-label"></label>
-                <select asp-for="TenantId" class ="form-control" asp-items="ViewBag.ResidencyId"></select>
+                <label asp-for="ResidencyId" class="control-label"></label>
+                <select asp-for="ResidencyId" class ="form-control" asp-items="ViewBag.ResidencyId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
