--- a/Kollegeni/Views/Booking/Edit.cshtml
+++ b/Kollegeni/Views/Booking/Edit.cshtml
@@ -29,9 +29,9 @@
                 <span asp-validation-for="RoomId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TenantId" class="control-label"></label>
-                <select asp-for="TenantId" class="form-control" asp-items="ViewBag.ResidencyId"></select>
-                <span asp-validation-for="TenantId" class="text-danger"></span>
+                <label asp-for="ResidencyId" class="control-label"></label>
+                <select asp-for="ResidencyId" class="form-control" asp-items="ViewBag.ResidencyId"></select>
+                <span asp-validation-for="ResidencyId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
