--- a/Kollegeni/Views/Shared/_Layout.cshtml
+++ b/Kollegeni/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Kollegeni.styles.css" asp-append-version="true" />
+
 </head>
 <body>
     <header>
@@ -30,7 +31,9 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="container
+
+        
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
@@ -45,5 +48,6 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
+
 </body>
 </html>
