--- a/Kollegeni/Views/InfoPage/Index.cshtml
+++ b/Kollegeni/Views/InfoPage/Index.cshtml
@@ -23,7 +23,7 @@
     <li>Navigate to the <strong>Calendar</strong> page.</li>
     <li>Select the desired date and time slot.</li>
     <li>Click <strong>"Book"</strong> and fill in your details.</li>
-    <li>Wait for a confirmation email.</li>
+    <li>Wait for a confirmation notification</li>
 </ol>
 
 <h3>Contact</h3>
