--- a/Kollegeni/Views/Calendar/Index.cshtml
+++ b/Kollegeni/Views/Calendar/Index.cshtml
@@ -49,6 +49,7 @@
                 <div class="modal-body">
                     <form id="bookingForm">
                         <div class="form-group">
+                            <!-- skal være kun tidspunkt, da man jo klikker på datoen-->
                             <label for="startTime">Start Time</label>
                             <input type="datetime-local" class="form-control" id="startTime" required>
                         </div>
@@ -61,6 +62,7 @@
                             <select class="form-control" id="room" required>
                             </select>
                         </div>
+                        <!-- skal auto hentes fra sin session/identity? -->
                         <div class="form-group">
                             <label for="residency">Residency</label>
                             <select class="form-control" id="residency" required>
