--- a/Kollegeni/Views/Shared/_Layout.cshtml
+++ b/Kollegeni/Views/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="ProfilePage" asp-action="Index">Profile</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Residency" asp-action="Index">Tenants</a>
+                        </li>
 
                     </ul>
                 </div>
