--- a/Kollegeni/Views/Calendar/Index.cshtml
+++ b/Kollegeni/Views/Calendar/Index.cshtml
@@ -8,22 +8,12 @@
 
 @section Scripts {
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            var calendarEl = document.getElementById('calendar');
-            var calendar = new FullCalendar.Calendar(calendarEl, {
-                initialView: 'dayGridMonth',
-                events: '/Calendar/GetEvents'
-            });
-            calendar.render();
-        });
-
-    </script>
-    <script>
         document.addEventListener('DOMContentLoaded', function () {
         var calendarEl = document.getElementById('calendar');
 
         var calendar = new FullCalendar.Calendar(calendarEl, {
             initialView: 'dayGridMonth',
+            events: '/Calendar/GetEvents',
             dateClick: function(info) {
                 //Set the selected date in the hidden input
                 document.getElementById('selectedDate').value = info.dateStr;
