--- a/Kollegeni/Views/InfoPage/Index.cshtml
+++ b/Kollegeni/Views/InfoPage/Index.cshtml
@@ -7,13 +7,107 @@
 <p class="lead">Here’s everything you need to know about booking common rooms in our facility.</p>
 
 <hr />
+<!-- SAUNA -->
+<h2>Sauna</h2>
+<h3>Where?</h3>
+<p>The sauna is in nr. 75. When you come from the main door, you go all the way through to the back door to the garden. Then it is the door to the right.</p>
 
-<h3>Booking Guidelines</h3>
+<h3>Terms:</h3>
 <ul>
-    <li>Bookings must be made at least 24 hours in advance.</li>
-    <li>Bla bla information about payment and stuff</li>
-    <li>More info stuffs etc etc bla bla</li>
+    <li>You need to apply for the sauna at latest at 18:00 (6 pm) the day before you want to use it.</li>
+    <li>Food is forbidden in the sauna.</li>
+    <li>Consumption of alcohol is forbidden in the entire sauna area.</li>
+    <li>The sauna is a non-smoking area.</li>
+    <li>The sauna can only be used between 8 am and 10 pm.</li>
+    <li>The key will be handed over in your mailbox the same day that the sauna will be used.</li>
+    <li>The key must be returned immediately after use, and must be returned in the mailbox at nr. 73 2.1.</li>
+    <li>Excessive noise must be avoided because people are living right above. Should people complain, the user will have to obey the complaint.</li>
+    <li>If the above and/or following is violated, it can result in the user not being able to borrow the sauna anymore. In case of violations a complaint will be filed to the ALBOA administration.</li>
 </ul>
+
+<h3>Duties:</h3>
+<ul>
+    <li>The user of the sauna is responsible for cleaning the room immediately after use:</li>
+    <ul>
+        <li>The entire floor must be wiped off after use. This is very important, especially during fall and winter!</li>
+        <li>Toilet facilities must appear presentable.</li>
+        <li>The user must remove any garbage on the premises.</li>
+        <li>Please leave the sauna in a good condition, of which you want to receive it yourself.</li>
+    </ul>
+</ul>
+<!-- POOLROOM -->
+<h2>Poolroom</h2>
+<h3>Where?</h3>
+<p>The poolroom is in nr. 71. When you come from the main door, you go past the stairs, and then it is the door to the right under the stairs.</p>
+
+<h3>Terms:</h3>
+<ul>
+    <li>You need to apply for the poolroom at latest at 18 (6 pm) the day before you want to use it.</li>
+    <li>Food is forbidden in the poolroom.</li>
+    <li>The poolroom is a non-smoking area.</li>
+    <li>The poolroom can only be used between 8 am and 10 pm.</li>
+    <li>The key will be handed over in your mailbox the same day that the poolroom will be used.</li>
+    <li>The key must be returned immediately after use, and must be returned in the mailbox at nr. 73 2.1.</li>
+    <li>Excessive noise must be avoided because people are living right above. Should people complain, the user will have to obey the complaint.</li>
+    <li>If the above and/or following is violated, it can result in the user not being able to borrow the poolroom anymore. In case of violations a complaint will be filed to the ALBOA administration.</li>
+</ul>
+
+<h3>Duties:</h3>
+<ul>
+    <li>The user of the poolroom is responsible for cleaning the room immediately after use:</li>
+    <ul>
+        <li>The room must be presentable after use. This includes vacuuming, if you have been wearing shoes.</li>
+        <li>Toilet facilities must appear presentable.</li>
+        <li>The user must remove any garbage on the premises.</li>
+        <li>Please leave the poolroom in a good condition, of which you want to receive it yourself.</li>
+    </ul>
+</ul>
+
+<h3>Responsibilities:</h3>
+<ul>
+    <li>The person signing this document accepts the following:</li>
+    <ul>
+        <li>The user will pay for 100% of damages caused in the period specified in the reservation. The cost of repair/replacement will be added directly onto your rent.</li>
+        <li>The user will pay for a new key to the poolroom, should he or she lose it.</li>
+        <li>If the key has not been returned 24 hours after end of use, the user can be terminated from further use of the facility.</li>
+    </ul>
+</ul>
+<p>Remember to bring your own toilet paper and towels for the restroom.</p>
+    </div>
+    <!-- BAR -->
+    <div>
+<h2>Bar</h2>
+<h3>Where?</h3>
+<p>The bar is in nr. 73. When you come from the main door, you go by the stairs, and then it is the door to the left under the stairs. When you get in there, it is the only door on the right (with two locks on it).</p>
+
+<h3>Conditions:</h3>
+<ul>
+    <li>You need to apply for the bar at least 2 weeks before you want to use it.</li>
+    <li>The price for hiring the bar is 200 kr. and the keys will not be handed over until the price has been paid.</li>
+    <li>The key will be handed over in your mailbox the same day that the bar will be used.</li>
+    <li>When hiring the bar on Sundays till Thursdays, the music has to be turned off at 10 PM and the bar must be closed at 11 PM.</li>
+    <li>When hiring the bar on Fridays or Saturdays, the music has to be turned off at 2 AM and the bar must be closed at 3 AM. There are apartments directly above the bar, so please be respectful to your neighbours. If there are any complaints they must be respected immediately.</li>
+    <li>Smoking is not allowed in the bar, only outside.</li>
+    <li>The keys for the bar shall be returned the next day after the bar has been used. The keys must be returned in the mailbox at nr. 73 2.1.</li>
+    <li>If the emergency door is used as access to the outside, it is your responsibility that the personal belongings (in the steel cages on the way outside) are treated properly.</li>
+</ul>
+
+<h3>Duties:</h3>
+<ul>
+    <li>Cleaning any ashtrays and collecting cigarette butts outside.</li>
+    <li>The bar counter, toilet, sinks, tables and chairs must be cleaned (after big parties the floor must be cleaned as well).</li>
+    <li>The hallway must be swept (and cleaned after big parties).</li>
+    <li>Fresh air must be let into the room after use.</li>
+    <li>Please leave the bar in a good condition, of which you want to receive it yourself.</li>
+</ul>
+
+<h3>Responsibilities:</h3>
+<ul>
+    <li>The person signing this contract is liable for the keys to the bar, any damages to furniture or equipment and missing furniture or equipment. The cost of repair/replacement will be added directly onto your rent.</li>
+    <li>If the key has not been returned 24 hours after end of use, the user can be terminated from further use of the facility.</li>
+</ul>
+<p>Remember to bring your own toilet paper and towels for the restroom.</p>
+    </div>
 
 <h3>Room Availability</h3>
 <p>Room availability can be viewed through the <a asp-controller="Calendar" asp-action="Index">calendar page</a>.</p>
